--- a/diary/package.json
+++ b/diary/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "axios": "^1.6.8",
     "date-fns": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
