--- a/diary/package.json
+++ b/diary/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.8",
     "date-fns": "^3.5.0",
+    "jotai": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
